# whispersub

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  whispersub.py
.github/workflows/: publish.yml
tests/: test_whispersub.py
