[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispersub"
dynamic = ["version"]
description = "Transcribe videos to ASS subtitle files using faster-whisper"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "av>=12.0.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.24",
    "pysubs2>=1.6",
    "rich",
]

[project.scripts]
whispersub = "whispersub:main"

[project.optional-dependencies]
gpu = [
    "nvidia-cublas-cu12; sys_platform != 'darwin'",
    "nvidia-cuda-runtime-cu12; sys_platform != 'darwin'",
]
dev = ["pytest"]

[tool.setuptools_scm]

[tool.setuptools]
py-modules = ["whispersub"]
