[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispersub"
dynamic = ["version"]
description = "Transcribe videos to ASS subtitle files in 99 languages using faster-whisper"
keywords = [
    "ASS",
    "audio",
    "automatic subtitles",
    "captions",
    "faster-whisper",
    "multilingual",
    "speech recognition",
    "speech-to-text",
    "SRT",
    "SSA",
    "subtitle",
    "subtitle generation",
    "subtitles",
    "transcription",
    "video",
    "whisper",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "av>=12.0.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.24",
    "pysubs2>=1.6",
    "rich",
]

[project.urls]
Repository = "https://github.com/zvea/whispersub"
Issues = "https://github.com/zvea/whispersub/issues"

[project.scripts]
whispersub = "whispersub:main"

[project.optional-dependencies]
gpu = [
    "nvidia-cublas-cu12; sys_platform != 'darwin'",
    "nvidia-cuda-runtime-cu12; sys_platform != 'darwin'",
]
dev = ["pytest"]

[tool.setuptools_scm]

[tool.setuptools]
py-modules = ["whispersub"]
